# corpora-service-maps

./: README.md  pyproject.toml
.github/workflows/: crawl.yml
collections/: collection.json
src/: __init__.py  generator.py
src/manifest/: __init__.py  manifest.py
